--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanacion Reconectiva</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <header>
-            <img src="./images/logo.png" class="header__logo"/>  
-            <nav class="header__nav">
-                <ul>
-                    <li class="menu__buttom"><a href="./index.html">Inicio</a></li>
-                    <li class="menu__buttom"><a href="./Paginas/QueEs.html">¿Que es?</a></li>
-                    <li class="menu__buttom"><a href="./Paginas/Origen.html">Origen</a></li>
-                    <li class="menu__buttom"><a href="./Paginas/NuestrasPracticas.html">Nuestras Practicas</a></li>
-                    <li class="menu__buttom"><a href="./Paginas/Contacto.html">Contactenos</a></li>
-                    <li class="menu__buttom"><a href="./Paginas/Usuario.html">Usuario</a></li>
-                </ul>
+            <nav class="nav">
+
+                    <div class="nav__container">
+
+                        <img src="./images/logo.png" class="nav__logo"/>  
+
+                        <label for="menu" class="nav__label">
+                            <img src="./assets/menu.svg" alt="" class="nav__img">
+                        </label>
+                        <input type="checkbox" id="menu" class="nav__input">
+                        
+                        <div class="nav__menu">
+                            <a href="./index.html" class="nav__item">Inicio</a>
+                            <a href="./pages/que-es.html" class="nav__item">¿Que es?</a>
+                            <a href="./pages/origen.html" class="nav__item">Origen</a>
+                            <a href="./pages/nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
+                            <a href="./pages/contacto.html" class="nav__item">Contactenos</a>
+                            <a href="./pages/usuario.html" class="nav__item">Usuario</a>
+                    </div>
+                </div>
             </nav> 
     </header>
-    <main>
-        <div class="main__div__h1">
+    <main class="main__div__h1">
              <h1>¡Bienvenidos a Sanacion Reconectiva!</h1>
-        </div>
-    </main>
+                </main>
     <footer>
         <p>Sanacion Reconectiva 2023 copyright</p>
         <div>
