FONDO Y CONT CENTRADO

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
     <title>Sanacion Reconectiva</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
@@ -16,7 +17,7 @@
                 <img src="../images/logo.png" class="nav__logo"/>  
 
                 <label for="menu" class="nav__label">
-                    <img src="./assets/menu.svg" alt="" class="nav__img">
+                    <img src="../assets/menu.svg" alt="" class="nav__img">
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
                 
@@ -32,20 +33,44 @@
     </nav> 
         </div>
     </header>
-    <main class="main__div__contact">
+    <main >
+        <section class="main__div__contact">
             <div class="main__div__text__contact">
                 <h1 class=>Contactanos!</h1>
                 <p>Mail:aaaaaa@gmail.com</p>
                 <p>WhatsApp: +54 9 1111111111</p>
                 <p>Telefono: +54 9 1111111111</p>
                 <p>Instagrma: SanacionReconectiva_</p>
-                <a href="./form-contc.html">Dejanos tu contacto aqui!</a>
+                <a class= "button-ctc" href="./form-contc.html">Dejanos tu contacto aqui!</a>
             </div>
+        </section>
     </main>
-    <footer>
-        <p>Sanacion Reconectiva 2023 copyright</p>
-        <div>
-            <p> Made by Mateo :)</p>
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="../images/logosr.jpg" alt="Logo de Sushi">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
 </body>
