--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
     <title>Sanacion Reconectiva</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -31,13 +32,36 @@
                 </div>
             </nav> 
     </header>
-    <main class="main__div__h1">
-             <h1>¡Bienvenidos a Sanacion Reconectiva!</h1>
-                </main>
-    <footer>
-        <p>Sanacion Reconectiva 2023 copyright</p>
-        <div>
-            <p> Made by Mateo :)</p>
+    <main >
+             <h1 class="main__div__h1">¡Bienvenidos a Sanacion Reconectiva!</h1>
+             <section></section>
+    </main>
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="images/logosr.jpg" alt="Logo de Sushi">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
 </body>
