--- a/pages/nuestras-practicas.html
+++ b/pages/nuestras-practicas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
     <title>Sanacion Reconectiva</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
@@ -16,7 +17,7 @@
                 <img src="../images/logo.png" class="nav__logo"/>  
 
                 <label for="menu" class="nav__label">
-                    <img src="./assets/menu.svg" alt="" class="nav__img">
+                    <img src="../assets/menu.svg" alt="" class="nav__img">
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
                 
@@ -32,30 +33,53 @@
     </nav> 
     </header>
     <main>
-        <div class="main__div__textimg__1">
-            <div class="main__div__text__1">
-                <h1 class="main__div">Sanacion Reconectiva</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                    error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                    reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+        <section>
+            <div class="main__div__textimg__1">
+                <div class="main__div__text__1">
+                    <h1 class="main__div">Sanacion Reconectiva</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
+                        error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
+                        reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+                </div>
+                    <img class="main__div__img1" src="../images/sanacion.png">
             </div>
-                <img class="main__div__img1" src="../images/sanacion.png">
-        </div>
-        <div class="main__div__textimg__1">
-            <div class="main__div__text__1">
-                <h2>Reconexion</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                    error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                    reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+            <div class="main__div__textimg__1">
+                <div class="main__div__text__1">
+                    <h2>Reconexion</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
+                        error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
+                        reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+                </div>
+                    <img class="main__div__img1" src="../images/reconexion.png">
             </div>
-                 <img class="main__div__img1" src="../images/reconexion.png">
-        </div>
-
+        </section>
     </main>
-    <footer>
-        <p>Sanacion Reconectiva 2023 copyright</p>
-        <div>
-            <p> Made by Mateo :)</p>
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="../images/logosr.jpg" alt="Logo de Sushi">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>&copy; 2023 <b>Takko Sushi</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
 </body>
