--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="images/logosr.jpg" alt="Logo de Sushi">
+                        <img class= "footer-lgo"src="images/logosr.jpg" alt="Logo de SR">
                     </a>
                 </figure>
             </div>
             <div class="box">
-                <h2>SOBRE NOSOTROS</h2>
+                <h2>CONTACTO</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
             </div>
