--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,7 +50,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="../images/logosr.jpg" alt="Logo de Sushi">
+                        <img src="../images/logosr.jpg" alt="Logo de SR">
                     </a>
                 </figure>
             </div>
