--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -56,7 +56,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="../images/logosr.jpg" alt="Logo de Sushi">
+                        <img src="../images/logosr.jpg" alt="Logo de SR">
                     </a>
                 </figure>
             </div>
