--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
             </nav> 
     </header>
     <main >
-             <h1 class="main__div__h1">¡Bienvenidos a Sanacion Reconectiva!</h1>
-             <section></section>
+             <section class="main__div__textimg__1">
+                <div class="divi">
+                <h1>¡Bienvenidos a Sanacion Reconectiva!</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat debitis perferendis odio veniam veritatis praesentium voluptatibus laborum. Rerum itaque sequi dolorum! A minima iste optio ex? Temporibus accusantium illo nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint amet nisi repudiandae reiciendis dicta quasi quisquam laudantium fugit expedita nam atque corrupti, possimus dolorem debitis facere quae culpa aspernatur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tenetur incidunt, eveniet dolore quae pariatur odio tempora architecto accusantium aliquam. Iusto libero sint possimus dolore. Velit illo ducimus consectetur laboriosam!
+                </p>
+                </div>
+            </section>
     </main>
     <footer class="pie-pagina">
         <div class="grupo-1">
