--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -33,8 +33,8 @@
     </nav> 
     </header>
     <main>
-        <section>
-            <div class="main__div__textimg__1">
+        <section class="main__div__user">
+            <div>
                     <div>
                         <form class="loginform">
                             <h1>Bienvenido!</h1>
