--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,11 +33,11 @@
     </nav> 
         </div>
     </header>
-    <main >
+    <main>
         <section class="main__div__contact">
             <div class="main__div__text__contact">
                 <h1 class=>Contactanos!</h1>
-                <p>Mail:aaaaaa@gmail.com</p>
+                <p>Mail:SReconectiva@gmail.com</p>
                 <p>WhatsApp: +54 9 1111111111</p>
                 <p>Telefono: +54 9 1111111111</p>
                 <p>Instagrma: SanacionReconectiva_</p>
