--- a/pages/form-contc.html
+++ b/pages/form-contc.html
@@ -33,8 +33,8 @@
     </nav> 
     </header>
     <main>
-        <section>
-            <div class="main__div__textimg__1">
+        <section  class="main__div__contact">
+            <div>
                 <div>
                     <div class="login">
                         <form class="loginform">
