--- a/pages/que-es.html
+++ b/pages/que-es.html
@@ -33,15 +33,12 @@
         </nav> 
         </header>
         <main>
-            <section>
-                <div class="main__div__textimg__1">
-                    <div class="main__div__text__1">
-                        <h1>¿Que es la Sanacion Reconectiva?</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
-                    </div>
-                        <img class="main__div__img1" src="../images/pexels-anete-lusina-5240734.jpg" alt="">
+            <section class="main__div__textimg__1">
+                <div class="divi1">
+                    <h1>¿Que es?</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat debitis perferendis odio veniam veritatis praesentium voluptatibus laborum. Rerum itaque sequi dolorum! A minima iste optio ex? Temporibus accusantium illo nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint amet nisi repudiandae reiciendis dicta quasi quisquam laudantium fugit expedita nam atque corrupti, possimus dolorem debitis facere quae culpa aspernatur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tenetur incidunt, eveniet dolore quae pariatur odio tempora architecto accusantium aliquam. Iusto libero sint possimus dolore. Velit illo ducimus consectetur laboriosam!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet impedit voluptatum nisi, quidem velit dignissimos fugiat vitae deserunt ullam libero magni neque, ut non fugit blanditiis delectus. Amet, eum laborum!
+                    </p>
                 </div>
             </section>
         </main>
