--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                             <a href="./pages/nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                             <a href="./pages/contacto.html" class="nav__item">Contactenos</a>
                             <a href="./pages/usuario.html" class="nav__item">Usuario</a>
+                            <a href="./pages/nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
                     </div>
                 </div>
             </nav> 
