--- a/pages/nuestras-practicas.html
+++ b/pages/nuestras-practicas.html
@@ -28,30 +28,25 @@
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
+                    <a href="./usuario.html" class="nav__item">Nuestro Recorrido</a>
             </div>
         </div>
     </nav> 
     </header>
     <main>
-        <section>
-            <div class="main__div__textimg__1">
-                <div class="main__div__text__1">
-                    <h1 class="main__div">Sanacion Reconectiva</h1>
+        <section class="main__div__textimg__1">
+                <div class="divi1 bk-img1">
+                    <h1 class="margin">Sanacion Reconectiva</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
                         error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
                         reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
                 </div>
-                    <img class="main__div__img1" src="../images/sanacion.png">
-            </div>
-            <div class="main__div__textimg__1">
-                <div class="main__div__text__1">
-                    <h2>Reconexion</h2>
+                <div class="divi1 bk-img2">
+                    <h2 class="margin">Reconexion</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
                         error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
                         reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
                 </div>
-                    <img class="main__div__img1" src="../images/reconexion.png">
-            </div>
         </section>
     </main>
     <footer class="pie-pagina">
