--- a/pages/nuestro-recorrido.html
+++ b/pages/nuestro-recorrido.html
@@ -27,34 +27,15 @@
                     <a href="./origen.html" class="nav__item">Origen</a>
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
-                    <a href="./usuario.html" class="nav__item">Usuario</a>          
+                    <a href="./usuario.html" class="nav__item">Usuario</a>
                     <a href="./nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
             </div>
         </div>
     </nav> 
     </header>
     <main>
-        <section  class="main__div__contact">
-            <div>
-                <div>
-                    <div class="login">
-                        <form class="loginform">
-                            <h1>Bienvenido!</h1>
-                            <label for="n-tel">Numero de Telefono:</label>
-                            <input type="number" name="num" placeholder="+541111111111" required>
-                            
-                            <label for="password">Correo Electronico:</label>
-                            <input type="text" placeholder="forexample@sreconectiva.com" name="mail" required>
-                            
-                            <button type="submit" title="Ingresar" name="Ingresar">Ingresar</button>
-                            <a class= "button-ctc" href="../index.html">« Volver</a>
-                        </form>
-                    </div>
-                    <div class="main__div__text__user__back">
-
-                    </div>
-                </div>
-            </div>
+        <section class="main__div__textimg__1">
+<h1>PAGINA EN PROCESO. VUELVA MAS TARDE :)</h1>
         </section>
     </main>
     <footer class="pie-pagina">
