--- a/pages/que-es.html
+++ b/pages/que-es.html
@@ -27,7 +27,8 @@
                         <a href="./origen.html" class="nav__item">Origen</a>
                         <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                         <a href="./contacto.html" class="nav__item">Contactenos</a>
-                        <a href="./usuario.html" class="nav__item">Usuario</a>
+                        <a href="./usuario.html" class="nav__item">Usuario</a>           
+                        <a href="./nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
                 </div>
             </div>
         </nav> 
