--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -28,12 +28,13 @@
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
+                    <a href="./nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
             </div>
         </div>
     </nav> 
     </header>
     <main>
-        <section class="main__div__user">
+        <section class="main__div__contact main__div__user">
             <div>
                     <div>
                         <form class="loginform">
