--- a/pages/nuestras-practicas.html
+++ b/pages/nuestras-practicas.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Sanacion Reconectiva</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
@@ -34,19 +35,28 @@
     </nav> 
     </header>
     <main>
-        <section class="main__div__textimg__1">
-                <div class="divi1 bk-img1">
-                    <h1 class="margin">Sanacion Reconectiva</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                        error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                        reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+        <section>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-2">
+                    <div class="divi2 bk-img1">
+                        <h1 class="margin">Sanacion Reconectiva</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
+                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
+                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+                    </div>
                 </div>
-                <div class="divi1 bk-img2">
+                <div class="col-2"></div>
+                <div class="col-2">                    
+                    <div class="divi2 bk-img2">
                     <h2 class="margin">Reconexion</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
                         error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
                         reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
-                </div>
+                </div></div>
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+            </div>
         </section>
     </main>
     <footer class="pie-pagina">
@@ -74,8 +84,9 @@
             </div>
         </div>
         <div class="grupo-2">
-            <small>&copy; 2023 <b>Takko Sushi</b> - Todos los Derechos Reservados.</small>
+            <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
 </body>
 </html>
