--- a/pages/que-es.html
+++ b/pages/que-es.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">       
-        <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <title>Sanacion Reconectiva</title>
         <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-        <header>
+    <header>
             <nav class="nav">
 
                 <div class="nav__container">
@@ -32,14 +33,22 @@
                 </div>
             </div>
         </nav> 
-        </header>
+    </header>
         <main>
-            <section class="main__div__textimg__1">
-                <div class="divi1">
-                    <h1>¿Que es?</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat debitis perferendis odio veniam veritatis praesentium voluptatibus laborum. Rerum itaque sequi dolorum! A minima iste optio ex? Temporibus accusantium illo nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint amet nisi repudiandae reiciendis dicta quasi quisquam laudantium fugit expedita nam atque corrupti, possimus dolorem debitis facere quae culpa aspernatur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tenetur incidunt, eveniet dolore quae pariatur odio tempora architecto accusantium aliquam. Iusto libero sint possimus dolore. Velit illo ducimus consectetur laboriosam!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet impedit voluptatum nisi, quidem velit dignissimos fugiat vitae deserunt ullam libero magni neque, ut non fugit blanditiis delectus. Amet, eum laborum!
-                    </p>
+            <section>
+                <div class="row">
+                    <div class="col-4">
+                    </div>
+                    <div class="col-4">
+                        <div class="divi1">
+                            <h1>¿Que es?</h1>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat debitis perferendis odio veniam veritatis praesentium voluptatibus laborum. Rerum itaque sequi dolorum! A minima iste optio ex? Temporibus accusantium illo nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint amet nisi repudiandae reiciendis dicta quasi quisquam laudantium fugit expedita nam atque corrupti, possimus dolorem debitis facere quae culpa aspernatur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tenetur incidunt, eveniet dolore quae pariatur odio tempora architecto accusantium aliquam. Iusto libero sint possimus dolore. Velit illo ducimus consectetur laboriosam!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet impedit voluptatum nisi, quidem velit dignissimos fugiat vitae deserunt ullam libero magni neque, ut non fugit blanditiis delectus. Amet, eum laborum!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                    </div>
                 </div>
             </section>
         </main>
@@ -71,5 +80,6 @@
                 <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
