--- a/pages/nuestras-practicas.html
+++ b/pages/nuestras-practicas.html
@@ -24,8 +24,7 @@
                 
                 <div class="nav__menu">
                     <a href="../index.html" class="nav__item">Inicio</a>
-                    <a href="./que-es.html" class="nav__item">¿Que es?</a>
-                    <a href="./origen.html" class="nav__item">Origen</a>
+                    <a href="./informacion.html" class="nav__item">Informacion</a>
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
@@ -37,25 +36,22 @@
     <main>
         <section>
             <div class="row">
-                <div class="col-2"></div>
-                <div class="col-2">
+                <div class="col-xl-6 col-sm-12"> 
                     <div class="divi2 bk-img1">
                         <h1 class="margin">Sanacion Reconectiva</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
-                    </div>
-                </div>
-                <div class="col-2"></div>
-                <div class="col-2">                    
-                    <div class="divi2 bk-img2">
-                    <h2 class="margin">Reconexion</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
                         error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
                         reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
-                </div></div>
-                <div class="col-2"></div>
-                <div class="col-2"></div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-sm-12">                    
+                    <div class="divi3 bk-img2">
+                        <h2 class="margin">Reconexion</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
+                        error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
+                        reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
