--- a/pages/nuestro-recorrido.html
+++ b/pages/nuestro-recorrido.html
@@ -24,8 +24,7 @@
                 
                 <div class="nav__menu">
                     <a href="../index.html" class="nav__item">Inicio</a>
-                    <a href="./que-es.html" class="nav__item">¿Que es?</a>
-                    <a href="./origen.html" class="nav__item">Origen</a>
+                    <a href="./informacion.html" class="nav__item">Informacion</a>
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
