--- a/pages/form-contc.html
+++ b/pages/form-contc.html
@@ -24,8 +24,7 @@
                 
                 <div class="nav__menu">
                     <a href="../index.html" class="nav__item">Inicio</a>
-                    <a href="./que-es.html" class="nav__item">¿Que es?</a>
-                    <a href="./origen.html" class="nav__item">Origen</a>
+                    <a href="./informacion.html" class="nav__item">Informacion</a>
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>          
@@ -35,12 +34,14 @@
     </nav> 
     </header>
     <main>
-        <section  class="main__div__contact">
-            <div>
-                <div>
+        <section  class="container-fluid">
+            <div class="row">
+                <div class="col-xl-4 col-sm-12"></div>
+                <div class="col-xl-4 col-sm-12">
+                    <div class="main__div__text__user">
                     <div class="login">
                         <form class="loginform">
-                            <h1>Bienvenido!</h1>
+                            <h1>Deja tu contacto!</h1>
                             <label for="n-tel">Numero de Telefono:</label>
                             <input type="number" name="num" placeholder="+541111111111" required>
                             
@@ -51,9 +52,8 @@
                             <a class= "button-ctc" href="../index.html">« Volver</a>
                         </form>
                     </div>
-                    <div class="main__div__text__user__back">
-
                     </div>
+                    <div class="col-xl-4 col-sm-12"></div>
                 </div>
             </div>
         </section>
