--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>        
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <title>Sanacion Reconectiva</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
@@ -27,35 +28,37 @@
                     <a href="./informacion.html" class="nav__item">Informacion</a>
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
-                    <a href="./usuario.html" class="nav__item">Usuario</a>                    
-                    <a href="./usuario.html" class="nav__item">Nuestro Recorrido</a>
+                    <a href="./usuario.html" class="nav__item">Usuario</a>           
+                    <a href="./nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
             </div>
         </div>
     </nav> 
-        </div>
-    </header>
-    <main>
-        <section class="container-fluid">      
-            <div class="row">     
-                <div class="col-xl-4 col-sm-12"></div>
-                <div class="col-xl-4 col-sm-12">
-                    <div class="main__div__text__contact">
-                        <h1 class=>Contactanos!</h1>
-                        <p><b>Mail:</b></p>
-                        <p>SReconectiva@gmail.com</p>
-                        <p><b>WhatsApp:</b></p>
-                        <p>+54 9 1111111111 </p>
-                        <p><b>Telefono: </b></p>
-                        <p>+54 9 1111111111 </p>
-                        <p><b>Instagrma:</b></p>  
-                        <p>SanacionReconectiva_</p>
-                        <a class= "button-ctc" href="./form-contc.html">Dejanos tu contacto aqui!</a>
+</header>
+        <main>
+            <section>
+                <div class="transition"> 
+                    <a href="./origen.html"><button class="transition__button1">Origen</button></a>      
+                    <div class="main__div__textimg__1 transi">
+                        <div class="main__div__text__1 transi">
+                            <h1>Origen</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
+                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
+                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+                        </div>
+                        <img class="main__div__img1 transi" src="../images/pexels-arina-krasnikova-6998275.jpg">
+                    </div>
+                    <div class="main__div__textimg__1">
+                        <div class="main__div__text__1 ">
+                            <h2>¿Que es?</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
+                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
+                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+                        </div>
+                        <img class="main__div__img1" src="../images/pexels-anete-lusina-5240734.jpg">
                     </div>
                 </div>
-                <div class="col-xl-4 col-sm-12"></div>
-            </div> 
-        </section>
-    </main>
+            </section>
+        </main>
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
@@ -83,7 +86,7 @@
         <div class="grupo-2">
             <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
-    </footer>
+    </footer> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
