--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -24,8 +24,7 @@
                 
                 <div class="nav__menu">
                     <a href="../index.html" class="nav__item">Inicio</a>
-                    <a href="./que-es.html" class="nav__item">¿Que es?</a>
-                    <a href="./origen.html" class="nav__item">Origen</a>
+                    <a href="./inforacion.html" class="nav__item">Inforamcion</a>
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
@@ -35,9 +34,11 @@
     </nav> 
     </header>
     <main>
-        <section class="main__div__contact main__div__user">
-            <div>
-                    <div>
+        <section class="container-fluid">
+            <div class="row">                
+                <div class="col-xl-4 col-sm-12"></div>                
+                <div class="col-xl-4 col-sm-12">
+                    <div class="main__div__text__user">
                         <form class="loginform">
                             <h1>Bienvenido!</h1>
                             <label for="usuario">Usuario:</label>
@@ -50,7 +51,10 @@
                             <a class= "button-ctc" href="../index.html">« Volver</a>
                         </form>
                     </div>
+                </div>
+                <div class="col-xl-4 col-sm-12"></div>
             </div>
+            
         </section>
     </main>
     <footer class="pie-pagina">
