--- a/index.html
+++ b/index.html
@@ -1,61 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Sanacion Reconectiva</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/main.css">
 </head>
+
 <body>
     <header>
-            <nav class="nav">
+        <nav class="nav">
 
-                    <div class="nav__container">
+            <div class="nav__container">
 
-                        <img src="./images/logo.png" class="nav__logo"/>  
+                <img src="./images/logo.png" class="nav__logo" />
 
-                        <label for="menu" class="nav__label">
-                            <img src="./assets/menu.svg" alt="" class="nav__img">
-                        </label>
-                        <input type="checkbox" id="menu" class="nav__input">
-                        
-                        <div class="nav__menu">
-                            <a href="./index.html" class="nav__item">Inicio</a>
-                            <a href="./pages/informacion.html" class="nav__item">Informacion</a>
-                            <a href="./pages/nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
-                            <a href="./pages/contacto.html" class="nav__item">Contactenos</a>
-                            <a href="./pages/usuario.html" class="nav__item">Usuario</a>
-                            <a href="./pages/nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
+                <label for="menu" class="nav__label">
+                    <img src="./assets/menu.svg" alt="" class="nav__img">
+                </label>
+                <input type="checkbox" id="menu" class="nav__input">
+
+                <div class="nav__menu">
+                    <a href="./index.html" class="nav__item">Inicio</a>
+                    <a href="./pages/informacion.html" class="nav__item">Informacion</a>
+                    <a href="./pages/nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
+                    <a href="./pages/contacto.html" class="nav__item">Contactenos</a>
+                    <a href="./pages/usuario.html" class="nav__item">Usuario</a>
+                    <a href="./pages/nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="centre">
+            <div class="main__layout">
+                <div class="main__organization">
+                    <div class="divi">
+                        <h1>¡Bienvenidos a Sanacion Reconectiva!</h1>
+                        <h3>Encontraste lo que necesitabas y no te arrepentiras!</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat debitis perferendis
+                            odio
+                            veniam veritatis praesentium voluptatibus laborum. Rerum itaque sequi dolorum! A minima
+                            iste
+                            optio ex? Temporibus accusantium illo nihil.
+                        </p>
+                        <a href="./pages/informacion.html"> <button class="masInfo">Mas Informacion!</button></a>
                     </div>
                 </div>
-            </nav> 
-    </header>
-    <main >
-        <section class="container-fluid">      
-                <div class="row">
-                    <div class="col-xl-4 col-sm-12">
-                    </div>
-                    <div class="col-xl-4 col-sm-12">
-                        <div class="divi">
-                            <h1>¡Bienvenidos a Sanacion Reconectiva!</h1>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat debitis perferendis odio veniam veritatis praesentium voluptatibus laborum. Rerum itaque sequi dolorum! A minima iste optio ex? Temporibus accusantium illo nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint amet nisi repudiandae reiciendis dicta quasi quisquam laudantium fugit expedita nam atque corrupti, possimus dolorem debitis facere quae culpa aspernatur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tenetur incidunt, eveniet dolore quae pariatur odio tempora architecto accusantium aliquam. Iusto libero sint possimus dolore. Velit illo ducimus consectetur laboriosam!
-                            </p>
+                <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./images/pexels-tina-nord-816377 (1).jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/pexels-pixabay-355863.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/pexels-pixabay-268134.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
-                    <div class="col-xl-4 col-sm-12">
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
+            </div>
         </section>
     </main>
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="#">
-                        <img class= "footer-lgo"src="images/logosr.jpg" alt="Logo de SR">
+                    <a href="">
+                        <img class="footer-lgo" src="images/logosr.jpg" alt="Logo de SR">
                     </a>
                 </figure>
             </div>
@@ -78,6 +106,9 @@
             <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
