--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,59 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Sanacion Reconectiva</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/main.css">
 </head>
+
 <body>
     <header>
         <nav class="nav">
 
             <div class="nav__container">
 
-                <img src="../images/logo.png" class="nav__logo"/>  
+                <img src="../images/logo.png" class="nav__logo" />
 
                 <label for="menu" class="nav__label">
                     <img src="../assets/menu.svg" alt="" class="nav__img">
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
-                
+
                 <div class="nav__menu">
                     <a href="../index.html" class="nav__item">Inicio</a>
                     <a href="./informacion.html" class="nav__item">Informacion</a>
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
-                    <a href="./usuario.html" class="nav__item">Usuario</a>                    
+                    <a href="./usuario.html" class="nav__item">Usuario</a>
                     <a href="./usuario.html" class="nav__item">Nuestro Recorrido</a>
+                </div>
             </div>
-        </div>
-    </nav> 
+        </nav>
         </div>
     </header>
     <main>
-        <section class="container-fluid">      
-            <div class="row">     
-                <div class="col-xl-4 col-sm-12"></div>
-                <div class="col-xl-4 col-sm-12">
-                    <div class="main__div__text__contact">
+        <section class="centre">
+            <div class="main__layout">
+                <div class="main__organization">
+                    <div class="divi">
                         <h1 class=>Contactanos!</h1>
-                        <p><b>Mail:</b></p>
-                        <p>SReconectiva@gmail.com</p>
-                        <p><b>WhatsApp:</b></p>
-                        <p>+54 9 1111111111 </p>
-                        <p><b>Telefono: </b></p>
-                        <p>+54 9 1111111111 </p>
-                        <p><b>Instagrma:</b></p>  
-                        <p>SanacionReconectiva_</p>
-                        <a class= "button-ctc" href="./form-contc.html">Dejanos tu contacto aqui!</a>
+                        <p><b>Mail:</b> SReconectiva@gmail.com</p>
+                        <p><b>WhatsApp:</b>+54 9 1111111111</p>
+                        <p><b>Telefono:</b> +54 9 1111111111 </p>
+                        <p><b>Instagrma:</b>SanacionReconectiva_</p>
+                        <a href="../pages/form-contc.html"> <button class="masInfo">Dejanos tu contacto
+                                aqui!</button></a>
                     </div>
                 </div>
-                <div class="col-xl-4 col-sm-12"></div>
-            </div> 
+            </div>
         </section>
     </main>
     <footer class="pie-pagina">
@@ -84,6 +82,9 @@
             <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
