--- a/pages/nuestras-practicas.html
+++ b/pages/nuestras-practicas.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Sanacion Reconectiva</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/main.css">
 </head>
+
 <body>
     <header>
         <nav class="nav">
 
             <div class="nav__container">
 
-                <img src="../images/logo.png" class="nav__logo"/>  
+                <img src="../images/logo.png" class="nav__logo" />
 
                 <label for="menu" class="nav__label">
                     <img src="../assets/menu.svg" alt="" class="nav__img">
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
-                
+
                 <div class="nav__menu">
                     <a href="../index.html" class="nav__item">Inicio</a>
                     <a href="./informacion.html" class="nav__item">Informacion</a>
@@ -29,37 +32,55 @@
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
                     <a href="./usuario.html" class="nav__item">Nuestro Recorrido</a>
+                </div>
             </div>
-        </div>
-    </nav> 
+        </nav>
     </header>
     <main>
-        <section>
-            <div class="row">
-                <div class="col-xl-6 col-sm-12"> 
-                    <div class="divi2 bk-img1">
-                        <h1 class="margin">Sanacion Reconectiva</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                        error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                        reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+            <section class="height-info">
+
+                <article class="info">
+                    <div>
+                        <h1>Sanacion</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a
+                            accusantium necessitatibus veniam
+                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi
+                            beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus,
+                            assumenda blanditiis itaque
+                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum
+                            rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+                            mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt
+                            vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.
+                        </p>
                     </div>
-                </div>
-                <div class="col-xl-6 col-sm-12">                    
-                    <div class="divi3 bk-img2">
-                        <h2 class="margin">Reconexion</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                        error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                        reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
+                    <img class="info__img" src="../images/sanacion.png">
+                </article>
+
+
+                <article class="info">
+                    <div class="">
+                        <h2>Reconexion</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a
+                            accusantium necessitatibus veniam
+                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi
+                            beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus,
+                            assumenda blanditiis itaque
+                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum
+                            rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+                            mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt
+                            vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.
+                        </p>
                     </div>
-                </div>
-            </div>
-        </section>
+                    <img class="info__img" src="../images/reconexion.png">
+                </article>
+
+            </section>
     </main>
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="#">
+                    <a href="../index.html">
                         <img src="../images/logosr.jpg" alt="Logo de Sushi">
                     </a>
                 </figure>
@@ -83,6 +104,9 @@
             <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
