--- a/pages/nuestro-recorrido.html
+++ b/pages/nuestro-recorrido.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Sanacion Reconectiva</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
+
 <body>
     <header>
         <nav class="nav">
 
             <div class="nav__container">
 
-                <img src="../images/logo.png" class="nav__logo"/>  
+                <img src="../images/logo.png" class="nav__logo" />
 
                 <label for="menu" class="nav__label">
                     <img src="../assets/menu.svg" alt="" class="nav__img">
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
-                
+
                 <div class="nav__menu">
                     <a href="../index.html" class="nav__item">Inicio</a>
                     <a href="./informacion.html" class="nav__item">Informacion</a>
@@ -29,13 +32,13 @@
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
                     <a href="./nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
+                </div>
             </div>
-        </div>
-    </nav> 
+        </nav>
     </header>
     <main>
         <section class="main__div__textimg__1">
-<h1>PAGINA EN PROCESO. VUELVA MAS TARDE :)</h1>
+            <h1>PAGINA EN PROCESO. VUELVA MAS TARDE :)</h1>
         </section>
     </main>
     <footer class="pie-pagina">
@@ -66,6 +69,9 @@
             <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
